Minor opprydding
MELOSYS-5053